tests/parser/good/empty_module.hel
// @name empty_module
// @phase parser
// @expect success

