tests/parser/bad/import_no_path.hel
// @name import_no_path
// @phase parser
// @expect error

import;
